external-crates/move/crates/move-compiler/tests/move_check/parser/acquires_list_generic.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/acquires_list_generic.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

warning[W09006]: unused struct type parameter
  ┌─ tests/move_check/parser/acquires_list_generic.move:2:17
  │
2 │     struct CupC<T: drop> {}
  │                 ^ Unused type parameter 'T'. Consider declaring it as phantom
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09006]: unused struct type parameter
  ┌─ tests/move_check/parser/acquires_list_generic.move:4:14
  │
4 │     struct B<T> {}
  │              ^ Unused type parameter 'T'. Consider declaring it as phantom
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/acquires_list_generic.move:6:25
  │
6 │     fun foo() acquires B<CupC<R>> {
  │                         ^
  │                         │
  │                         Unexpected '<'
  │                         Expected ','

